# string-list

./: .gitignore  LICENSE  README.md  pyproject.toml
string_list/: __init__.py  core.py
tests/: test_core.py
